--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,12 @@
 # 1. Copy the env file
 #    cp .env.example .env
 
-# 2. Fill in your own values
+# 2. Then edit the .env file and fill in your own values for GOOSE_DBSTRING and JWT_SECRET_KEY.
+#    Example:
+#    GOOSE_DBSTRING="<username>://<username>:<password>@localhost:5433/<database>?sslmode=disable"
+#    JWT_SECRET_KEY="your secret key"
 
-GOOSE_DBSTRING="database-string"
+GOOSE_DBSTRING="database string"
 GOOSE_DRIVER=postgres
 GOOSE_MIGRATION_DIR=./internal/postgresql/migrations
-JWT_SECRET_KEY="secretkey"
+JWT_SECRET_KEY="your secret key"
